Search and University Lightbox Change - Openai Change

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <meta http-equiv="Clear-Site-Data" content="cache">
     <title>DEICER : DEI Community Engagement Reporter</title>
   </head>
-  <body>
+  <body class="min-h-screen flex flex-col">
     <div id="root"></div>
+    <div id="overlay-root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
