ICE and Watcher Icons.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta http-equiv="Cache-Control" content="no-store, must-revalidate, max-age=0">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <meta http-equiv="Clear-Site-Data" content="cache">
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Clear-Site-Data" content="cache, storage, executionContexts" />
     <title>DEICER : DEI Community Engagement Reporter</title>
   </head>
   <body class="min-h-screen flex flex-col">
